<resources>
    <string name="app_name">ProjectBWA</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing_desc">Lebih mudah mengetahui \nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan \nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk \ntransaksi tiket nonton</string>
    <string name="memulai">MEMULAI</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="daftar_akun_baru">DAFTAR AKUN BARU</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang \nYanson</string>
    <string name="simpan_dan_lanjutkan">SIMPAN DAN LANJUTKAN</string>
    <string name="now_playing">Now Playing</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="checkkout">Checkout</string>
    <string name="bayar_sekarang">BAYAR SEKARANG</string>
    <string name="batalkan">BATALKAN</string>
    <string name="when">When</string>
    <string name="datetime">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="total_bayar">Total Harus Dibayar</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="editprofil">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="my_history">My History</string>
    <string name="daftar">DAFTAR</string>
    <string name="happy_watch">Happy Watching!</string>
    <string name="lihat_tike">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>